(library
 (name EsyPrebuiltTest)
 (public_name esy-prebuilt.test)
 (modules
  (:standard \ EsyPrebuiltTestPesyModules))
 (libraries esy-prebuilt.test.pesy-modules)
 (flags -linkall -g -w -9 -open EsyPrebuiltTestPesyModules))

(library
 (public_name esy-prebuilt.test.pesy-modules)
 (name EsyPrebuiltTestPesyModules)
 (modules EsyPrebuiltTestPesyModules)
 (libraries esy-prebuilt.library rely.lib))

(rule
 (with-stdout-to
  EsyPrebuiltTestPesyModules.re
  (run echo
    "module Library = EsyPrebuiltLibrary.Library;\nmodule Rely = Rely;")))
