(library (name EsyPrebuiltUtilTest) (public_name esy-prebuilt-util.test)
    (modules (:standard \ EsyPrebuiltUtilTestPesyModules))
    (libraries esy-prebuilt-util.test.pesy-modules)
    (flags -linkall -g -w -9 -open EsyPrebuiltUtilTestPesyModules))
(library (public_name esy-prebuilt-util.test.pesy-modules)
    (name EsyPrebuiltUtilTestPesyModules)
    (modules EsyPrebuiltUtilTestPesyModules)
    (libraries esy-prebuilt-util.library rely.lib))
(rule
    (with-stdout-to EsyPrebuiltUtilTestPesyModules.re
        (run echo
             "module Library = EsyPrebuiltUtilLibrary.Library;\
            \nmodule Rely = Rely;")))
