(executable (name RunEsyPrebuiltTests)
    (modules (:standard \ EsyPrebuiltUtilTestExePesyModules))
    (public_name RunEsyPrebuiltTests.exe)
    (libraries esy-prebuilt-util.testExe.pesy-modules)
    (flags -open EsyPrebuiltUtilTestExePesyModules))
(library (public_name esy-prebuilt-util.testExe.pesy-modules)
    (name EsyPrebuiltUtilTestExePesyModules)
    (modules EsyPrebuiltUtilTestExePesyModules)
    (libraries esy-prebuilt-util.test))
(rule
    (with-stdout-to EsyPrebuiltUtilTestExePesyModules.re
        (run echo "module Test = EsyPrebuiltUtilTest;")))
